# serializer version: 1
# name: test_setup[number.arcam_fmj_127_0_0_1_balance-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max': 6,
      'min': -6,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.arcam_fmj_127_0_0_1_balance',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Balance',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Balance',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'balance',
    'unique_id': '456789abcdef-1-balance',
    'unit_of_measurement': <UnitOfSoundPressure.DECIBEL: 'dB'>,
  })
# ---
# name: test_setup[number.arcam_fmj_127_0_0_1_balance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Arcam FMJ (127.0.0.1) Balance',
      'max': 6,
      'min': -6,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
      'unit_of_measurement': <UnitOfSoundPressure.DECIBEL: 'dB'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.arcam_fmj_127_0_0_1_balance',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[number.arcam_fmj_127_0_0_1_bass_equalization-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max': 12,
      'min': -12,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.arcam_fmj_127_0_0_1_bass_equalization',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Bass equalization',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Bass equalization',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'bass_equalization',
    'unique_id': '456789abcdef-1-bass_equalization',
    'unit_of_measurement': <UnitOfSoundPressure.DECIBEL: 'dB'>,
  })
# ---
# name: test_setup[number.arcam_fmj_127_0_0_1_bass_equalization-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Arcam FMJ (127.0.0.1) Bass equalization',
      'max': 12,
      'min': -12,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
      'unit_of_measurement': <UnitOfSoundPressure.DECIBEL: 'dB'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.arcam_fmj_127_0_0_1_bass_equalization',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[number.arcam_fmj_127_0_0_1_lip_sync_delay-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max': 250,
      'min': 0,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.arcam_fmj_127_0_0_1_lip_sync_delay',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Lip sync delay',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Lip sync delay',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'lipsync_delay',
    'unique_id': '456789abcdef-1-lipsync_delay',
    'unit_of_measurement': <UnitOfTime.MILLISECONDS: 'ms'>,
  })
# ---
# name: test_setup[number.arcam_fmj_127_0_0_1_lip_sync_delay-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Arcam FMJ (127.0.0.1) Lip sync delay',
      'max': 250,
      'min': 0,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 5,
      'unit_of_measurement': <UnitOfTime.MILLISECONDS: 'ms'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.arcam_fmj_127_0_0_1_lip_sync_delay',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[number.arcam_fmj_127_0_0_1_sub_stereo_trim-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max': 0,
      'min': -10,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.arcam_fmj_127_0_0_1_sub_stereo_trim',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Sub stereo trim',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sub stereo trim',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sub_stereo_trim',
    'unique_id': '456789abcdef-1-sub_stereo_trim',
    'unit_of_measurement': <UnitOfSoundPressure.DECIBEL: 'dB'>,
  })
# ---
# name: test_setup[number.arcam_fmj_127_0_0_1_sub_stereo_trim-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Arcam FMJ (127.0.0.1) Sub stereo trim',
      'max': 0,
      'min': -10,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 0.5,
      'unit_of_measurement': <UnitOfSoundPressure.DECIBEL: 'dB'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.arcam_fmj_127_0_0_1_sub_stereo_trim',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[number.arcam_fmj_127_0_0_1_subwoofer_trim-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max': 10,
      'min': -10,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.arcam_fmj_127_0_0_1_subwoofer_trim',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Subwoofer trim',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Subwoofer trim',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'subwoofer_trim',
    'unique_id': '456789abcdef-1-subwoofer_trim',
    'unit_of_measurement': <UnitOfSoundPressure.DECIBEL: 'dB'>,
  })
# ---
# name: test_setup[number.arcam_fmj_127_0_0_1_subwoofer_trim-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Arcam FMJ (127.0.0.1) Subwoofer trim',
      'max': 10,
      'min': -10,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 0.5,
      'unit_of_measurement': <UnitOfSoundPressure.DECIBEL: 'dB'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.arcam_fmj_127_0_0_1_subwoofer_trim',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[number.arcam_fmj_127_0_0_1_treble_equalization-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max': 12,
      'min': -12,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.arcam_fmj_127_0_0_1_treble_equalization',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Treble equalization',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Treble equalization',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'treble_equalization',
    'unique_id': '456789abcdef-1-treble_equalization',
    'unit_of_measurement': <UnitOfSoundPressure.DECIBEL: 'dB'>,
  })
# ---
# name: test_setup[number.arcam_fmj_127_0_0_1_treble_equalization-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Arcam FMJ (127.0.0.1) Treble equalization',
      'max': 12,
      'min': -12,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
      'unit_of_measurement': <UnitOfSoundPressure.DECIBEL: 'dB'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.arcam_fmj_127_0_0_1_treble_equalization',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[number.arcam_fmj_127_0_0_1_zone_2_balance-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max': 6,
      'min': -6,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.arcam_fmj_127_0_0_1_zone_2_balance',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Balance',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Balance',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'balance',
    'unique_id': '456789abcdef-2-balance',
    'unit_of_measurement': <UnitOfSoundPressure.DECIBEL: 'dB'>,
  })
# ---
# name: test_setup[number.arcam_fmj_127_0_0_1_zone_2_balance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Arcam FMJ (127.0.0.1) Zone 2 Balance',
      'max': 6,
      'min': -6,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
      'unit_of_measurement': <UnitOfSoundPressure.DECIBEL: 'dB'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.arcam_fmj_127_0_0_1_zone_2_balance',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[number.arcam_fmj_127_0_0_1_zone_2_bass_equalization-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max': 12,
      'min': -12,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.arcam_fmj_127_0_0_1_zone_2_bass_equalization',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Bass equalization',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Bass equalization',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'bass_equalization',
    'unique_id': '456789abcdef-2-bass_equalization',
    'unit_of_measurement': <UnitOfSoundPressure.DECIBEL: 'dB'>,
  })
# ---
# name: test_setup[number.arcam_fmj_127_0_0_1_zone_2_bass_equalization-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Arcam FMJ (127.0.0.1) Zone 2 Bass equalization',
      'max': 12,
      'min': -12,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
      'unit_of_measurement': <UnitOfSoundPressure.DECIBEL: 'dB'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.arcam_fmj_127_0_0_1_zone_2_bass_equalization',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[number.arcam_fmj_127_0_0_1_zone_2_lip_sync_delay-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max': 250,
      'min': 0,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.arcam_fmj_127_0_0_1_zone_2_lip_sync_delay',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Lip sync delay',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Lip sync delay',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'lipsync_delay',
    'unique_id': '456789abcdef-2-lipsync_delay',
    'unit_of_measurement': <UnitOfTime.MILLISECONDS: 'ms'>,
  })
# ---
# name: test_setup[number.arcam_fmj_127_0_0_1_zone_2_lip_sync_delay-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Arcam FMJ (127.0.0.1) Zone 2 Lip sync delay',
      'max': 250,
      'min': 0,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 5,
      'unit_of_measurement': <UnitOfTime.MILLISECONDS: 'ms'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.arcam_fmj_127_0_0_1_zone_2_lip_sync_delay',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[number.arcam_fmj_127_0_0_1_zone_2_subwoofer_trim-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max': 10,
      'min': -10,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.arcam_fmj_127_0_0_1_zone_2_subwoofer_trim',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Subwoofer trim',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Subwoofer trim',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'subwoofer_trim',
    'unique_id': '456789abcdef-2-subwoofer_trim',
    'unit_of_measurement': <UnitOfSoundPressure.DECIBEL: 'dB'>,
  })
# ---
# name: test_setup[number.arcam_fmj_127_0_0_1_zone_2_subwoofer_trim-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Arcam FMJ (127.0.0.1) Zone 2 Subwoofer trim',
      'max': 10,
      'min': -10,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 0.5,
      'unit_of_measurement': <UnitOfSoundPressure.DECIBEL: 'dB'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.arcam_fmj_127_0_0_1_zone_2_subwoofer_trim',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[number.arcam_fmj_127_0_0_1_zone_2_treble_equalization-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max': 12,
      'min': -12,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.arcam_fmj_127_0_0_1_zone_2_treble_equalization',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Treble equalization',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Treble equalization',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'treble_equalization',
    'unique_id': '456789abcdef-2-treble_equalization',
    'unit_of_measurement': <UnitOfSoundPressure.DECIBEL: 'dB'>,
  })
# ---
# name: test_setup[number.arcam_fmj_127_0_0_1_zone_2_treble_equalization-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Arcam FMJ (127.0.0.1) Zone 2 Treble equalization',
      'max': 12,
      'min': -12,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
      'unit_of_measurement': <UnitOfSoundPressure.DECIBEL: 'dB'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.arcam_fmj_127_0_0_1_zone_2_treble_equalization',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
